fixed auth layout issue

--- a/src/components/Layouts/Auth/Header/style.module.css
+++ b/src/components/Layouts/Auth/Header/style.module.css
@@ -2,6 +2,7 @@
 .navbar {
     position: fixed;
     width: 100%;
+    z-index: 2;
 }
 
 .navbarItems {
