--- a/src/components/Layouts/Auth/style.module.css
+++ b/src/components/Layouts/Auth/style.module.css
@@ -1,23 +1,24 @@
 .background {
-    position: relative;
-    z-index: -1;
-    background-image: linear-gradient(270deg, #06846F 0.35%, #54BEE8 103.4%);
+  position: relative;
+
+  background-image: linear-gradient(270deg, #06846f 0.35%, #54bee8 103.4%);
 }
 
-.skewBackground {  
-    position: absolute;
-    z-index: -1;
-    top: -45%;
-    width: 100%;
-    height: 100%;
-    transform: skewY(-10deg);
-    background-color: white;
+.skewBackground {
+  position: absolute;
+  z-index: 1;
+  top: -45%;
+  width: 100%;
+  height: 100%;
+  transform: skewY(-10deg);
+  background-color: white;
 }
 
-.container {   
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.container {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
